# tree-sitter-papyrus-sse

./: .gitignore  Cargo.toml  README.md  grammar.js  package.json  tree-sitter.json
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: 0_headers.txt  1_statements.txt  2_expressions.txt  3_functions.txt  4_events.txt  5_properties.txt
