[package]
name = "tree-sitter-papyrus-sse"
description = "A parser for the Papyrus scripting language used in Skyrim Special Edition."
version = "0.5.0"
authors = ["Hexanode"]
license = "GPLv3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "papyrus"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/Silent-City-Projects/tree-sitter-papyrus-sse"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
